[package]
name = "gameboy-rom"
version = "0.1.0"
authors = ["Mark McCaskey <maoeurk@gmail.com>"]
edition = "2018"
description = "Gameboy ROM parser"
license = "Apache"

[dependencies]
nom = "5.0.0-beta2"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", optional = true}

[[bin]]
name = "gb2json"
path = "src/bin/gb2json.rs"
required-features = ["serde_json"]