[package]
name = "gameboy-rom"
version = "0.2.2"
authors = ["Mark McCaskey <maoeurk@gmail.com>"]
edition = "2018"
description = "Gameboy ROM parser"
license = "Apache-2.0"
repository = "https://github.com/MarkMcCaskey/gameboy-rom-parser"
readme = "README.md"
keywords = ["gameboy", "rom", "parser", "gb", "gbc"]
categories = ["emulators", "encoding"]

[badges]
travis-ci = { repository = "MarkMcCaskey/gameboy-rom-parser", branch = "master" }

[dependencies]
nom = "5.0"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", optional = true}

[[bin]]
name = "gb2json"
path = "src/bin/gb2json.rs"
required-features = ["serde_json"]

[[bin]]
name = "gbstats"
path = "src/bin/gbstats.rs"